# agent-harmony

./: .gitignore  .mcp.json  CHANGELOG.md  LICENSE  README.ko.md  README.md  pyproject.toml
.claude-plugin/: plugin.json
.claude/agents/: plugin-critic.md
agents/: expert-agent.md
docs/: DESIGN_PHILOSOPHY.md
hooks/: hooks.json
runtime/: mcp_server.py  setup.sh
runtime/harmony/: __init__.py
runtime/harmony/memory/: store.py
runtime/harmony/orchestrator/: pipeline.py  pipeline_build.py  pipeline_setup.py  pipeline_verify.py  state.py  templates.py  utils.py  verifier.py  verifier_code_quality.py  verifier_frontend.py
runtime/harmony/orchestrator/prompts/: __init__.py  build.py  delivery.py  design.py  interview.py  quality.py  security.py  setup.py
skills/build-refs/: SKILL.md
skills/codebase-init/: SKILL.md
skills/generate-agents/: SKILL.md
skills/harmony/: SKILL.md
skills/project-init/: SKILL.md
skills/run/: SKILL.md
skills/team-executor/: SKILL.md
tests/: conftest.py  test_mcp_server.py  test_memory_store.py  test_pipeline.py  test_prompts.py  test_repo_contract.py  test_state.py  test_templates.py  test_verifier.py  test_verifier_code_quality.py
