[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-harmony"
version = "1.0.4"
description = "One prompt to production. Multi-pass quality assurance for autonomous AI development."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/hohre12/agent-harmony"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["runtime"]
